syntax = "proto3";

import "changes-lists-messages.proto";

package changesLists.service;
option csharp_namespace = "ChangesLists.Service";

service GrpcScheduleChangesLists {
    rpc GetBriefChangesListCollection(changesLists.messages.GetByEducOrgIdRequest)
        returns (changesLists.messages.GetBriefChangesListCollectionResponse);

    rpc GetScheduleChangesListById(changesLists.messages.GetByIdRequest) 
        returns (changesLists.messages.GetChangesListByIdResponse);

    rpc CreateScheduleChangesList(changesLists.messages.CreateScheduleChangesListRequest) 
        returns (changesLists.messages.SucceedResponse);

    rpc CreateScheduleChangesListFromFile(stream changesLists.messages.CreateScheduleChangesListFromFileRequest) 
        returns (changesLists.messages.SucceedResponse);

    rpc UpdateScheduleChangesList(changesLists.messages.UpdateScheduleChangesListRequest) 
        returns (changesLists.messages.SucceedResponse);

    rpc DeleteScheduleChangesList(changesLists.messages.DeleteScheduleChangesListRequest) 
        returns (changesLists.messages.SucceedResponse);

    rpc CreateScheduleChangesListItem(changesLists.messages.ChangesListItem)
        returns (changesLists.messages.SucceedResponse);

    rpc UpdateScheduleChangesListItem(changesLists.messages.ChangesListItem)
        returns (changesLists.messages.SucceedResponse);

    rpc DeleteScheduleChangesListItem(changesLists.messages.DeleteScheduleChangesItemRequest)
        returns (changesLists.messages.SucceedResponse);

}